chore: Update scrollbar style and fix mobile breakpoint in useIsMobile hook, update detail page

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -4,6 +4,9 @@
 @tailwind components;
 @tailwind utilities;
 
+::-webkit-scrollbar {
+  display: none;
+}
 body {
   @apply font-montserrat bg-secondary;
 }
